3159: Fix header spacing

--- a/app/assets/stylesheets/global/theme.scss
+++ b/app/assets/stylesheets/global/theme.scss
@@ -64,3 +64,7 @@ ul.no-marker {
     margin-bottom: 0;
   }
 }
+
+.no-bot-mrg {
+  margin-bottom: 0;
+}
