--- a/app/assets/stylesheets/local/accounts/shared.scss
+++ b/app/assets/stylesheets/local/accounts/shared.scss
@@ -24,18 +24,4 @@
       }
     }
   }
-
-  .payment-badge {
-    width: 68px;
-  }
-
-  .check-address {
-    display: inline-block;
-    padding-left: 5px;
-    vertical-align: top;
-
-    p {
-      margin-bottom: 0;
-    }
-  }
 }
